Fixed footer credit links

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 	<footer class="container-fluid text-center bg-ftr">
 		<p>Made by Md Ishtiaque Zafar.</p>
 		<p>mail: ishtiaque.zafar92@gmail.com</p>
-		<p>Chart credits: Chart.JS @ <a href="www.chartjs.org">chartjs.org</a></p>
+		<p>Chart credits: Chart.JS @ <a href="http://www.chartjs.org" target="_blank">chartjs.org</a></p>
 	</footer>
 </body>
 </html>
